--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -14,17 +14,17 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.6",
-    "@angular/cdk": "^15.2.6",
-    "@angular/common": "^15.2.6",
-    "@angular/compiler": "^15.2.6",
-    "@angular/core": "^15.2.6",
-    "@angular/forms": "^15.2.6",
-    "@angular/material": "^15.2.6",
-    "@angular/platform-browser": "^15.2.6",
-    "@angular/platform-browser-dynamic": "^15.2.6",
-    "@angular/platform-server": "^15.2.6",
-    "@angular/router": "^15.2.6",
+    "@angular/animations": "^15.2.8",
+    "@angular/cdk": "^15.2.8",
+    "@angular/common": "^15.2.8",
+    "@angular/compiler": "^15.2.8",
+    "@angular/core": "^15.2.8",
+    "@angular/forms": "^15.2.8",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "^15.2.8",
+    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/platform-server": "^15.2.8",
+    "@angular/router": "^15.2.8",
     "core-js": "^3.30.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
@@ -32,22 +32,23 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.5",
-    "@angular/cli": "^15.2.5",
-    "@angular/compiler-cli": "^15.2.6",
-    "@angular/language-service": "^15.2.6",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.8.7",
+    "@angular-devkit/build-angular": "^15.2.7",
+    "@angular/cli": "^15.2.7",
+    "@angular/compiler-cli": "^15.2.8",
+    "@angular/language-service": "^15.2.8",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.16.2",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
     "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
