--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,6 +26,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Setup Java
+      if: ${{ matrix.language=='java' }}
+      uses: actions/setup-java@v4
+      with:
+        java-version: 17
+        distribution: corretto
+        cache: maven
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
