--- a/train-history-updater/pom.xml
+++ b/train-history-updater/pom.xml
@@ -13,14 +13,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
+        <version>3.2.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <aws.msql.driver.version>1.1.14</aws.msql.driver.version>
+        <aws.msql.driver.version>1.1.15</aws.msql.driver.version>
         <java.version>17</java.version>
     </properties>
 
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>33.0.0-jre</version>
+            <version>33.2.1-jre</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -135,6 +135,9 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>2.16.2</version>
+                <configuration>
+                    <rulesUri>file:///${maven.multiModuleProjectDirectory}/../versions-maven-plugin-rules.xml</rulesUri>
+                </configuration>
             </plugin>
         </plugins>
     </build>
